#52 added comment about permgen